--- a/index.html
+++ b/index.html
@@ -9,23 +9,28 @@
 	</head>
 
 	<body>
+	<!-- header	 -->
 		<header>
    	<h1>Jacklyn Malone Portfolio</h1>
       </header>
 		
+	<!-- navigation bar	 -->
 		<nav class="navbar">
       	<a href="#About Me">About Me</a>
          <a href="#Work">Work</a>
          <a href="#Contact Me">Contact Me</a>
       </nav>
-
+	
+		<!-- main	 -->
 		<main class="layout">
+			<!-- sidebar -->
 			<aside class="sidebar">
 				<div= class="profile img">
 					<img src="images/profilepic.jpg" alt="profile pic">
 				</div>	
 			</aside>
 
+			<!-- About me section -->
 			<div= class="content">
 				<section class="about">
 				<h2 id="About Me">About Me</h2>
@@ -35,7 +40,7 @@
 						Below you will find some of my previous projects. Feel free to reach out to me anytime.	
 					</p>	
 				</section>
-				
+			<!-- Work Section -->
 				<section class="projects">
 				<h2 id="Work">Work</h2>
 					<div class="box">
@@ -84,7 +89,7 @@
 				</section>
 			</div>
 		</main>
-   	
+   	<!-- footer -->
 		<footer class="footer">
 			<h2 id="Contact Me">Contact Me</h2>
 			<p>jjmlmhc.09@gmail.com</p>
