--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 			<aside class="sidebar">
 				<div= class="profile img">
 					<img src="images/profilepic.jpg" alt="profile pic">
+				</div>
+				<div class="sideLinks">
+				 <h2>Github Repo Links</h2>
+				 	<ul><a href="https://github.com/Jax-o/Weather-Dashboard-server-side-API">Weather Repo</a></ul> 
+					<ul><a href="https://github.com/Jax-o/Third-Party-APIs-Work-Day-Scheduler">Work Scheduler Repo</a></ul>
+					<ul><a href="https://github.com/Jax-o/js-password-generator">Password Generator Repo</a></ul>
+					<ul><a href="https://github.com/djdyer/pokego-weather-companion">PokeGo Repo</a></ul>
 				</div>	
 			</aside>
 
@@ -34,7 +41,7 @@
 			<div= class="content">
 				<section class="about">
 				<h2 id="About Me">About Me</h2>
-					<p>Hi there! My name is Jackie and I am a full stack web developer. I am experienced with HTML, CSS, and JavaScript. 
+					<p>Hi there! My name is Jackie and I am a full stack web developer. I am experienced with HTML, CSS, JavaScript and jQuery. 
 						I am also confident in my ability to work with servers, databases and connecting them to the front end.
 						I'm passionate about continuing to grow as a web developer. I have been doing freelance projects for the past year.
 						Below you will find some of my previous projects. Feel free to reach out to me anytime.	
@@ -45,10 +52,10 @@
 				<h2 id="Work">Work</h2>
 					<div class="box">
 						<div class="code"> 
-						<a href="https://jax-o.github.io/Code-Refactor/">
-						<img src="images/coderefactor.png" alt="screenshot of work">
+						<a href="https://djdyer.github.io/pokego-weather-companion">
+						<img src="./images/screencapture-djdyer-github-io-pokego-weather-companion-2021-10-18-14_34_47.png" alt="screenshot of project pokego weather companion">
 						</a>
-						<div class="bottom">Code Refactor HTML/CSS</div>
+						<div class="bottom">Project PokeGo Weather Companion HTML/CSS/jQuery/API's</div>
 						</div>
 					</div>
 				</section>
@@ -56,34 +63,34 @@
 				<section class="place">
 					<div class="text">
 						<div class="holder">
-						<a href="#">
-						<img src="./images/placeholder-1200x500.png" alt="placeholder image">
+						<a href="https://jax-o.github.io/Code-Refactor/">
+						<img src="./images/coderefactor.png" alt="screenshot of code refractor project">
 						</a>
-						<div class="first">Placeholder image</div>
+						<div class="first">Code Refactor HTML/CSS</div>
 						</div>
 					</div>
 					<div class="text">
 						<div class="holder">
-						<a href="#">
-						<img src="./images/placeholder-1200x500.png" alt="placeholder image">
+						<a href="https://jax-o.github.io/Third-Party-APIs-Work-Day-Scheduler/">
+						<img src="./images/screencapture-jax-o-github-io-Third-Party-APIs-Work-Day-Scheduler-2021-10-18-14_41_40.png" alt="screenshot of work day planner project">
 						</a>
-						<div class="second">Placeholder image</div>
+						<div class="second">Work Day Scheduler HTML/CSS/jQuery</div>
 						</div>
 					</div>
 					<div class="text">
 						<div class="holder">
-						<a href="#">
-						<img src="./images/placeholder-1200x500.png" alt="placeholder image">
+						<a href="https://jax-o.github.io/js-password-generator/">
+						<img src="./images/screencapture-jax-o-github-io-js-password-generator-2021-10-18-16_11_29.png" alt="screenshot of JavaScript Password Generator">
 						</a>
-						<div class="third">Placeholder image</div>
+						<div class="third">JavaScript Password Generator HTML/CSS/JavaScript</div>
 						</div>
 					</div>
 					<div class="text">
 						<div class="holder">
-						<a href="#">
-						<img src="./images/placeholder-1200x500.png" alt="placeholder image">
+						<a href="https://jax-o.github.io/Weather-Dashboard-server-side-API/">
+						<img src="./images/screencapture-jax-o-github-io-Weather-Dashboard-server-side-API-2021-10-18-16_16_29.png" alt="screenshot of weather API">
 						</a>
-						<div class="fourth">Placeholder image</div>
+						<div class="fourth">Weather server side API HTML/CSS/jQuery</div>
 						</div>
 					</div>
 				</section>
@@ -94,7 +101,8 @@
 			<h2 id="Contact Me">Contact Me</h2>
 			<p>jjmlmhc.09@gmail.com</p>
 		   <a href="https://github.com/Jax-o">Github</a>
-		   </div>
+			<a href="https://www.linkedin.com/in/jacklyn-malone-03b146219/">LinkedIn</a>
+			<a href="https://media-exp1.licdn.com/dms/document/C4E2DAQHFdK-YIH6N_g/profile-treasury-document-pdf-analyzed/0/1634591127419?e=1634680800&v=beta&t=T2Z3GGTbCDFIq1RE5uFhgNq6H3qUzYje72F29edOq6o">Resume</a>
 		</footer>
 	</body>
 </html>
